--- a/style.css
+++ b/style.css
@@ -144,3 +144,36 @@ li {
     padding: 5px;
     font-weight: 700;
 }
+
+footer button {
+    padding: 10px;
+    font-weight: 700;
+    font-size: 20px;
+    background-color: white;
+}
+
+footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+footer span {
+    font-size: 20px;
+    border-style: solid;
+    background-color: rgb(255, 255, 217);
+    padding: 5px;
+    font-weight: 700;
+    display: inline-block;
+}
+
+.reset {
+    padding: 5px 10px 5px 40px;
+    border-style: solid;
+    border-color:rgb(58, 58, 58);
+    border-width: 1px;
+}
+
+.reset span {
+    color: black;
+}
